--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,5 +63,22 @@ body {
 }
 
 .container .res {
-    height: 100px;
+    min-height: 100px;
+    width: 350px;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.container .res .placar{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 15px 0;
+    
+}
+
+.container .res img {
+    width: 100px;
 }
